Issue #46 Vertical Alignment
Issue fixed with javascript reposition, issue closed.

--- a/src/bootstrap-wizard.css
+++ b/src/bootstrap-wizard.css
@@ -3,12 +3,7 @@
 	display:none;	
 }
 
-.wizard-dialog {
-	transform: translate(0, 50%) !important;
-	-ms-transform: translate(0, 50%) !important; /* IE 9 */
-	-webkit-transform: translate(0, 50%) !important; /* Safari and Chrome */
-}
-
+.wizard-dialog {}
 .wizard-content {}
 
 .wizard-body {
